syntax = "proto2";

package hdmap_proto;

message Vector3d {
  required double x = 1;
  required double y = 2;
  required double z = 3;
}

message Cylinder {
  repeated Vector3d points = 1;
  repeated Vector3d pred_points = 2;
  repeated Vector3d succ_points = 3;
  optional float radius = 4;
}

message Circle {
  required Vector3d center = 1;
  required Vector3d normal = 2;
  required float radius = 3;
}

// cubic bezier curve
message CurveLine {
  // control points, index (0 -> n-1)
  repeated Vector3d points = 1;
  // pred points, index 0 not used 
  repeated Vector3d pred_points = 2;
  // succ points, index n-1 not used;
  repeated Vector3d succ_points = 3;
  optional float width = 4;
}

message Polygon {
  repeated Vector3d points = 1;
  optional float width = 2;
}

