syntax = "proto2";

package hdmap_proto;

import "id.proto";
import "geometry.proto";

message StopLine {
  required Id id = 1;
  repeated Id tile_ids = 2;

  required Polygon border = 4;
  repeated Id link_ids = 5;
}

message SpeedBump {
  required Id id = 1;
  repeated Id tile_ids = 2;

  required Polygon border = 4;
  required float height = 5;
  repeated Id link_ids = 6;
}

// pole; accesspole
message Pole {
  required Id id = 1;
  repeated Id tile_ids = 2;

  required Cylinder body = 4;
  repeated Id link_ids = 5;
}

// other trafficsign
message Board {
  required Id id = 1;
  repeated Id tile_ids = 2;

  required Polygon border = 4;
  repeated Id link_ids = 5;
}

message CrossWalk {
  required Id id = 1;
  repeated Id tile_ids = 2;

  required Polygon border = 4;
  repeated Polygon child_borders = 5;
  repeated Id link_ids = 6;
}

// other lanemarking
message Zone {
  required Id id = 1;
  repeated Id tile_ids = 2;

  required Polygon border = 4;
  repeated Id link_ids = 5;
}

message ParkingSlot {
  required Id id = 1;
  repeated Id tile_ids = 2;

  required Polygon border = 4;
  repeated Id link_ids = 5;
}

message Junction {
  required Id id = 1;
  repeated Id tile_ids = 2;

  required Polygon border = 4;
  repeated Id link_ids = 5;
}

